Add styles and javascript function

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>First HTML</title>
+    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     <h1>Probando Git</h1>
